--- a/neu/webdev/public/assignment/views/page/templates/page-new.view.client.html
+++ b/neu/webdev/public/assignment/views/page/templates/page-new.view.client.html
@@ -3,16 +3,16 @@
 
         <div class="col-sm-4 hidden-xs">
             <div class="navbar-text pull-left">
-                <a href="page-list.view.client.html" class="white_navbar navbar-link">
+                <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page" class="white_navbar navbar-link">
 					  <span class="grey-nav glyphicon glyphicon-chevron-left">
 					  </span>
                 </a>
             </div>
-            <a class="navbar-brand" href="#">
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page" class="navbar-brand">
                 <label class="grey-nav">Pages</label>
             </a>
             <div class="navbar-text pull-right">
-                <a href="page-new.view.client.html" class="navbar-link">
+                <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/new" class="navbar-link">
 					  <span class="grey-nav glyphicon glyphicon-plus">
 					  </span>
                 </a>
@@ -21,12 +21,12 @@
 
 
         <div class="col-sm-8 hidden-xs">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 <label class="grey-nav">New page</label>
             </a>
 
             <div class="navbar-text pull-right">
-                <a href="page-list.view.client.html" class="navbar-link">
+                <a ng-click="model.createPage()" class="navbar-link">
 					  <span class="grey-nav glyphicon glyphicon-ok">
 					  </span>
                 </a>
@@ -35,16 +35,16 @@
 
         <div class="col-xs-12 visible-xs">
             <div class="navbar-text pull-left">
-                <a href="page-list.view.client.html" class="white_navbar navbar-link">
+                <a href="#/user/{{model.userId}}/website/{{vm.websiteId}}/page" class="white_navbar navbar-link">
 					  <span class="grey-nav glyphicon glyphicon-chevron-left">
 					  </span>
                 </a>
             </div>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 <label class="grey-nav">New page</label>
             </a>
             <div class="navbar-text pull-right">
-                <a href="page-list.view.client.html" class="navbar-link">
+                <a ng-click="model.createPage()" class="navbar-link">
 					  <span class="grey-nav glyphicon glyphicon-ok">
 					  </span>
                 </a>
@@ -56,51 +56,17 @@
 <div class="container-fluid row">
     <div class="col-sm-4 hidden-xs wbdv-left-pane">
         <ul class="list-group">
-            <li class="list-group-item">
-                <a href="../../widget/templates/widget-list.view.client.html">
-                    Blog Post
-                </a>
-                <a href="page-edit.view.client.html" class="page-link pull-right">
-					  <span class="glyphicon glyphicon-cog">
-					  </span>
-                </a>
-            </li>
-            <li class="list-group-item">
-                <a href="../../widget/templates/widget-list.view.client.html">
-                    Blogs
-                </a>
-                <a href="page-edit.view.client.html" class="page-link pull-right">
-					  <span class="glyphicon glyphicon-cog">
-					  </span>
-                </a>
-            </li>
-            <li class="list-group-item">
-                <a href="../../widget/templates/widget-list.view.client.html">
-                    Home
-                </a>
-                <a href="page-edit.view.client.html" class="page-link pull-right">
-					  <span class="glyphicon glyphicon-cog">
-					  </span>
-                </a>
-            </li>
-            <li class="list-group-item">
-                <a href="../../widget/templates/widget-list.view.client.html">
-                    About
-                </a>
-                <a href="page-edit.view.client.html" class="page-link pull-right">
-					  <span class="glyphicon glyphicon-cog">
-					  </span>
-                </a>
-            </li>
-            <li class="list-group-item">
-                <a href="../../widget/templates/widget-list.view.client.html">
-                    Contact us
-                </a>
-                <a href="page-edit.view.client.html" class="page-link pull-right">
-					  <span class="glyphicon glyphicon-cog">
-					  </span>
-                </a>
-            </li>
+            <div ng-repeat="page in model.pages">
+                <li class="list-group-item">
+                    <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">
+                        {{page.name}}
+                    </a>
+                    <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}" class="page-link pull-right">
+                      <span class="glyphicon glyphicon-cog">
+                      </span>
+                    </a>
+                </li>
+            </div>
         </ul>
     </div>
 
@@ -116,7 +82,7 @@
         </div>
         <div class="form-group">
             <label for="page-new-web-description" class="form-control-label">Title</label>
-            <input ng-model="model.widget.title"
+            <input ng-model="model.page.description"
                    placeholder="Page Title"
                    id="page-new-web-description"
                    class="form-control"
@@ -130,7 +96,7 @@
 <nav class="navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="../views/user/profile.view.client.html" class="navbar-link">
+            <a href="#/user/{{model.userId}}" class="navbar-link">
                 <span class="blue-nav glyphicon glyphicon-user"></span>
             </a>
         </div>
