--- a/neu/webdev/public/assignment/views/widget/templates/widget-image.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-image.view.client.html
@@ -1,59 +1,1 @@
-<nav class="navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-text pull-left">
-            <a href="widget-list.view.client.html" class="white_navbar navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-chevron-left">
-                  </span>
-            </a>
-        </div>
-        <a class="navbar-brand" href="#">
-            <label class="grey-nav">Widget Edit</label>
-        </a>
-        <div class="navbar-text pull-right">
-            <a href="widget-list.view.client.html" class="navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-ok">
-                  </span>
-            </a>
-        </div>
-    </div>
-</nav>
-
-<div class="container-fluid">
-    <div class="newNAme form-group">
-        <label for="widget-image-name" class="form-control-label">Name</label>
-        <input id="widget-image-name" class="form-control" type="text">
-    </div>
-    <div class="form-group">
-        <label for="widget-image-text" class="form-control-label">Text</label>
-        <input id="widget-image-text" class="form-control" type="text">
-    </div>
-    <div class="form-group">
-        <label for="widget-image-url" class="form-control-label">URL</label>
-        <input id="widget-image-url" class="form-control" type="text"
-               value="http://media.npr.org/assets/img/2016/09/28/mosquitos_wide-76ba2518aba3ad2877dd9c2479b764f0eaf8ab0e-s1600-c85.jpg">
-    </div>
-    <div class="form-group">
-        <label for="widget-image-width" class="form-control-label">Width</label>
-        <input id="widget-image-width" class="form-control" type="text" value="100%">
-    </div>
-    <div class="form-group">
-        <label for="widget-image-upload" class="form-control-label">Upload</label>
-        <input id="widget-image-upload" class="form-control-file" type="file">
-    </div>
-    <div class="form-group">
-        <a href="#" class=" btn btn-primary form-control">Upload Image</a>
-    </div>
-    <div class="bottom-padding">
-        <a href="widget-list.view.client.html" class=" btn btn-danger form-control">Delete</a>
-    </div>
-</div>
-
-<nav class="navbar-default navbar-fixed-bottom">
-    <div class="container-fluid">
-        <div class="navbar-text pull-right">
-            <a href="../views/user/profile.view.client.html" class="navbar-link">
-                <span class="blue-nav glyphicon glyphicon-user"></span>
-            </a>
-        </div>
-    </div>
-</nav>
+<img ng-src="{{widget.url}}" width="{{widget.width}}">
