--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-youtube.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-youtube.view.client.html
@@ -21,11 +21,11 @@
 <div class="container-fluid">
     <div class="newNAme form-group">
         <label for="widget-image-name" class="form-control-label">Name</label>
-        <input id="widget-image-name" class="form-control" type="text">
+        <input ng-model="model.widget.name" id="widget-image-name" class="form-control" type="text">
     </div>
     <div class="form-group">
         <label for="widget-image-text" class="form-control-label">Text</label>
-        <input id="widget-image-text" class="form-control" type="text"></input>
+        <input ng-model="model.widget.text" id="widget-image-text" class="form-control" type="text"></input>
     </div>
     <div class="form-group">
         <label for="widget-image-url" class="form-control-label">URL</label>
@@ -37,7 +37,7 @@
     </div>
 
     <div class="bottom-padding">
-        <a href="../widget-list.view.client.html" class=" btn btn-danger form-control">Delete</a>
+        <a ng-click="model.deleteWidget()" class=" btn btn-danger form-control">Delete</a>
     </div>
 </div>
 
