--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-youtube.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-youtube.view.client.html
@@ -10,7 +10,7 @@
             <label class="grey-nav">Widget Edit</label>
         </a>
         <div class="navbar-text pull-right">
-            <a ng-click="model.updateWid(model.widget) class="navbar-link">
+            <a ng-click="model.updateWid(model.widget)" class="navbar-link">
                   <span class="grey-nav glyphicon glyphicon-ok">
                   </span>
             </a>
