--- a/neu/webdev/public/assignment/views/widget/templates/widget-youtube.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-youtube.view.client.html
@@ -1,3 +1,3 @@
-<div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" ng-src="{{model.doYouTrust(widget.url)}}"></iframe>
+<div >
+    <iframe width="100%"  ng-src="{{model.doYouTrust(widget.url)}}"></iframe>
 </div>
