--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
@@ -31,16 +31,14 @@
         <input ng-model="model.widget.text"
                id="widget-edit-text"
                class="form-control"
-               type="text"
-               value="Congress Ends Spat, Agrees To Fund $1.1 Billion To Combat Zika">
+               type="text">
     </div>
     <div class="form-group">
         <label for="widget-edit-size" class="form-control-label">Size</label>
         <input ng-model="model.widget.size"
                id="widget-edit-size"
                class="form-control"
-               type="text"
-               value="3">
+               type="text">
     </div>
     <a ng-click="model.deleteWidget()" class="btn btn-danger form-control">Delete</a>
 </div>
