--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-youtube.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-youtube.view.client.html
@@ -29,7 +29,7 @@
     </div>
     <div class="form-group">
         <label for="widget-image-url" class="form-control-label">URL</label>
-        <input ng-model="model.widget.url" id="widget-image-url" class="form-control" type="text" value="https://www.youtube.com/embed/SB35ikvGNgM">
+        <input ng-model="model.widget.url" id="widget-image-url" class="form-control" type="text">
     </div>
     <div class="form-group">
         <label for="widget-image-width" class="form-control-label">Width</label>
