--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
@@ -10,7 +10,7 @@
             <label class="grey-nav">Widget Edit</label>
         </a>
         <div class="navbar-text pull-right">
-            <a href="model.updateWid(model.widget)" class="navbar-link">
+            <a ng-click="model.updateWid(model.widget)" class="navbar-link">
                   <span class="grey-nav glyphicon glyphicon-ok">
                   </span>
             </a>
@@ -25,16 +25,15 @@
     </div>
     <div class="form-group">
         <label for="widget-image-text" class="form-control-label">Text</label>
-        <input id="widget-image-text" class="form-control" type="text">
+        <input ng-model="model.widget.text" id="widget-image-text" class="form-control" type="text">
     </div>
     <div class="form-group">
         <label for="widget-image-url" class="form-control-label">URL</label>
-        <input ng-model="model.widget.url" id="widget-image-url" class="form-control" type="text"
-               value="http://media.npr.org/assets/img/2016/09/28/mosquitos_wide-76ba2518aba3ad2877dd9c2479b764f0eaf8ab0e-s1600-c85.jpg">
+        <input ng-model="model.widget.url" id="widget-image-url" class="form-control" type="text">
     </div>
     <div class="form-group">
         <label for="widget-image-width" class="form-control-label">Width</label>
-        <input ng-model="model.widget.width" id="widget-image-width" class="form-control" type="text" value="100%">
+        <input ng-model="model.widget.width" id="widget-image-width" class="form-control" type="text">
     </div>
     <div class="form-group">
         <label for="widget-image-upload" class="form-control-label">Upload</label>
