--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
@@ -1,27 +1,8 @@
-<nav class="navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-text pull-left">
-            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget" class="white_navbar navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-chevron-left">
-                  </span>
-            </a>
-        </div>
-        <a class="navbar-brand">
-            <label class="grey-nav">Widget Edit</label>
-        </a>
-        <div class="navbar-text pull-right">
-            <a ng-click="model.updateWid(model.widget)" class="navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-ok">
-                  </span>
-            </a>
-        </div>
-    </div>
-</nav>
-
+<div class="newNAme"></div>
 <div class="container-fluid">
-    <div class="newNAme form-group">
+    <div class="form-group">
         <label for="widget-image-name" class="form-control-label">Name</label>
-        <input id="widget-image-name" class="form-control" type="text">
+        <input ng-model="model.widget.name" id="widget-image-name" class="form-control" type="text">
     </div>
     <div class="form-group">
         <label for="widget-image-text" class="form-control-label">Text</label>
@@ -46,13 +27,3 @@
         <a ng-click="model.deleteWidget()" class=" btn btn-danger form-control">Delete</a>
     </div>
 </div>
-
-<nav class="navbar-default navbar-fixed-bottom">
-    <div class="container-fluid">
-        <div class="navbar-text pull-right">
-            <a href="#/user/{{model.userId}}" class="navbar-link">
-                <span class="blue-nav glyphicon glyphicon-user"></span>
-            </a>
-        </div>
-    </div>
-</nav>
