Misisng Place Holders

--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-youtube.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-youtube.view.client.html
@@ -1,19 +1,35 @@
 <div class="container-fluid">
     <div class="newNAme form-group">
         <label for="widget-image-name" class="form-control-label">Name</label>
-        <input ng-model="model.widget.name" id="widget-image-name" class="form-control" type="text">
+        <input ng-model="model.widget.name"
+               id="widget-image-name"
+               class="form-control"
+               type="text"
+               placeholder="Video Name">
     </div>
     <div class="form-group">
-        <label for="widget-image-text" class="form-control-label">Text</label>
-        <input ng-model="model.widget.text" id="widget-image-text" class="form-control" type="text"></input>
+        <label for="widget-youtube-text" class="form-control-label">Text</label>
+        <input ng-model="model.widget.text"
+               id="widget-youtube-text"
+               class="form-control"
+               type="text"
+               placeholder="Youtube Text"></input>
     </div>
     <div class="form-group">
-        <label for="widget-image-url" class="form-control-label">URL</label>
-        <input ng-model="model.widget.url" id="widget-image-url" class="form-control" type="text">
+        <label for="widget-youtube-url" class="form-control-label">URL</label>
+        <input ng-model="model.widget.url"
+               id="widget-youtube-url"
+               class="form-control"
+               type="text"
+               placeholder="Youtube URL">
     </div>
     <div class="form-group">
-        <label for="widget-image-width" class="form-control-label">Width</label>
-        <input ng-model="model.widget.width" id="widget-image-width" class="form-control" type="text"></input>
+        <label for="widget-youtube-width" class="form-control-label">Width</label>
+        <input ng-model="model.widget.width"
+               id="widget-youtube-width"
+               class="form-control"
+               type="text"
+               placeholder="Youtube video Width"></input>
     </div>
 
     <div class="bottom-padding">
