--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
@@ -4,21 +4,24 @@
         <input ng-model="model.widget.name"
                id="widget-edit-name"
                class="form-control"
-               type="text">
+               type="text"
+               placeholder="Header Name">
     </div>
     <div class="form-group">
         <label for="widget-edit-text" class="form-control-label">Text</label>
         <input ng-model="model.widget.text"
                id="widget-edit-text"
                class="form-control"
-               type="text">
+               type="text"
+               placeholder="Header text">
     </div>
     <div class="form-group">
         <label for="widget-edit-size" class="form-control-label">Size</label>
         <input ng-model="model.widget.size"
                id="widget-edit-size"
                class="form-control"
-               type="text">
+               type="text"
+               placeholder="Header size">
     </div>
     <a ng-click="model.deleteWidget()" class="btn btn-danger form-control">Delete</a>
 </div>
