--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
@@ -2,23 +2,42 @@
 <div class="container-fluid">
     <div class="form-group">
         <label for="widget-image-name" class="form-control-label">Name</label>
-        <input ng-model="model.widget.name" id="widget-image-name" class="form-control" type="text">
+        <input ng-model="model.widget.name"
+               id="widget-image-name"
+               class="form-control"
+               type="text"
+               placeholder="Image Name">
     </div>
     <div class="form-group">
         <label for="widget-image-text" class="form-control-label">Text</label>
-        <input ng-model="model.widget.text" id="widget-image-text" class="form-control" type="text">
+        <input ng-model="model.widget.text"
+               id="widget-image-text"
+               class="form-control"
+               type="text"
+               placeholder="Image text">
     </div>
     <div class="form-group">
         <label for="widget-image-url" class="form-control-label">URL</label>
-        <input ng-model="model.widget.url" id="widget-image-url" class="form-control" type="text">
+        <input ng-model="model.widget.url"
+               id="widget-image-url"
+               class="form-control"
+               type="text"
+               placeholder="Image Url">
     </div>
     <div class="form-group">
         <label for="widget-image-width" class="form-control-label">Width</label>
-        <input ng-model="model.widget.width" id="widget-image-width" class="form-control" type="text">
+        <input ng-model="model.widget.width"
+               id="widget-image-width"
+               class="form-control"
+               type="text"
+               placeholder="Image Width">
     </div>
     <div class="form-group">
         <label for="widget-image-upload" class="form-control-label">Upload</label>
-        <input id="widget-image-upload" class="form-control-file" type="file">
+        <input id="widget-image-upload"
+               class="form-control-file"
+               type="file"
+               placeholder="Image File Location">
     </div>
     <div class="form-group">
         <a href="" class=" btn btn-primary form-control">Upload Image</a>
