changing nav bar

--- a/neu/webdev/public/assignment/views/page/templates/page-list.view.client.html
+++ b/neu/webdev/public/assignment/views/page/templates/page-list.view.client.html
@@ -1,17 +1,17 @@
-<nav class="navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
             <a href="#/user/{{model.userId}}/website" class="white_navbar navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-chevron-left">
+                  <span class="glyphicon glyphicon-chevron-left">
                   </span>
             </a>
         </div>
         <a class="navbar-brand">
-            <label class="grey-nav">Pages</label>
+            <label>Pages</label>
         </a>
         <div class="navbar-text pull-right">
             <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/new" class="navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-plus">
+                  <span class="glyphicon glyphicon-plus">
                   </span>
             </a>
         </div>
@@ -35,11 +35,11 @@
 </div>
 
 
-<nav class="navbar-default navbar-fixed-bottom">
+<nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
             <a href="#/user/{{model.userId}}" class="navbar-link">
-                <span class="blue-nav glyphicon glyphicon-user"></span>
+                <span class="glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
