--- a/neu/webdev/public/assignment/views/widget/templates/widget-chooser.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-chooser.view.client.html
@@ -1,13 +1,13 @@
-<nav class="navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
             <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget" class="white_navbar navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-chevron-left">
+                  <span class="glyphicon glyphicon-chevron-left">
                   </span>
             </a>
         </div>
         <a class="navbar-brand">
-            <label class="grey-nav">Choose Widget</label>
+            <label>Choose Widget</label>
         </a>
     </div>
 </nav>
@@ -48,11 +48,11 @@
 </div>
 
 
-<nav class="navbar-default navbar-fixed-bottom">
+<nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
             <a href="#/user/{{model.userId}}" class="navbar-link">
-                <span class="blue-nav glyphicon glyphicon-user"></span>
+                <span class="glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
