--- a/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -1,17 +1,17 @@
-<nav class="navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
             <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page" class="white_navbar navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-chevron-left">
+                  <span class=glyphicon glyphicon-chevron-left">
                   </span>
             </a>
         </div>
         <a class="navbar-brand" href="">
-            <label class="grey-nav">Widgets</label>
+            <label>Widgets</label>
         </a>
         <div class="navbar-text pull-right">
             <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/new" class="navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-plus">
+                  <span class="glyphicon glyphicon-plus">
                   </span>
             </a>
         </div>
@@ -41,23 +41,23 @@
 
 </div>
 
-<nav class="navbar-default navbar-fixed-bottom">
+<nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
             <a href="#" class="navbar-link">
-                <span class="grey-nav glyphicon glyphicon-play"></span>
+                <span class="glyphicon glyphicon-play"></span>
             </a>
         </div>
 
         <div class="navbar-text pull-left">
             <a href="#" class="navbar-link">
-                <span class="grey-nav glyphicon glyphicon-eye-open"></span>
+                <span class="glyphicon glyphicon-eye-open"></span>
             </a>
         </div>
 
         <div class="navbar-text pull-right">
             <a href="#/user/{{model.userId}}" class="navbar-link">
-                <span class="blue-nav glyphicon glyphicon-user"></span>
+                <span class="glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
