--- a/neu/webdev/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/page/templates/page-edit.view.client.html
@@ -1,19 +1,19 @@
-<nav class="navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="row container-fluid">
 
         <div class="col-sm-4 hidden-xs">
             <div class="navbar-text pull-left">
                 <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page" class="white_navbar navbar-link">
-					  <span class="grey-nav glyphicon glyphicon-chevron-left">
+					  <span class="glyphicon glyphicon-chevron-left">
 					  </span>
                 </a>
             </div>
             <a class="navbar-brand" href="#/user/{{model.userId}}/website/{{model.websiteId}}/page">
-                <label class="grey-nav">Pages</label>
+                <label>Pages</label>
             </a>
             <div class="navbar-text pull-right">
                 <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/new" class="navbar-link">
-					  <span class="grey-nav glyphicon glyphicon-plus">
+					  <span class=" glyphicon glyphicon-plus">
 					  </span>
                 </a>
             </div>
@@ -21,12 +21,12 @@
 
         <div class="col-sm-8 hidden-xs">
             <a class="navbar-brand">
-                <label class="grey-nav">Edit Page</label>
+                <label>Edit Page</label>
             </a>
 
             <div class="navbar-text pull-right">
                 <div ng-click="model.updatePage()" class="navbar-link">
-					  <span class="grey-nav glyphicon glyphicon-ok">
+					  <span class="glyphicon glyphicon-ok">
 					  </span>
                 </div>
             </div>
@@ -35,16 +35,16 @@
         <div class="col-xs-12 visible-xs">
             <div class="#/user/{{model.userId}}/website/{{model.websiteId}}/page">
                 <a href="page-list.view.client.html" class="white_navbar navbar-link">
-					  <span class="grey-nav glyphicon glyphicon-chevron-left">
+					  <span class="glyphicon glyphicon-chevron-left">
 					  </span>
                 </a>
             </div>
             <a class="navbar-brand">
-                <label class="grey-nav">Edit Page</label>
+                <label>Edit Page</label>
             </a>
             <div class="navbar-text pull-right">
                 <div ng-click="model.updatePage()" class="navbar-link">
-					  <span class="grey-nav glyphicon glyphicon-ok">
+					  <span class="glyphicon glyphicon-ok">
 					  </span>
                 </div>
             </div>
@@ -96,11 +96,11 @@
 </div>
 
 
-<nav class="navbar-default navbar-fixed-bottom">
+<nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
             <a href="#/user/{{model.userId}}" class="navbar-link">
-                <span class="blue-nav glyphicon glyphicon-user"></span>
+                <span class="glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
