--- a/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -1,17 +1,17 @@
-<nav class="navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
             <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget" class="white_navbar navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-chevron-left">
+                  <span class="glyphicon glyphicon-chevron-left">
                   </span>
             </a>
         </div>
         <a class="navbar-brand">
-            <label class="grey-nav">Widget Edit</label>
+            <label>Widget Edit</label>
         </a>
         <div class="navbar-text pull-right">
             <a ng-click="model.updateWid(model.widget)" class="navbar-link">
-                  <span class="grey-nav glyphicon glyphicon-ok">
+                  <span class="glyphicon glyphicon-ok">
                   </span>
             </a>
         </div>
@@ -22,11 +22,11 @@
 
 </div>
 
-<nav class="navbar-default navbar-fixed-bottom">
+<nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
             <a href="#/user/{{model.userId}}" class="navbar-link">
-                <span class="blue-nav glyphicon glyphicon-user"></span>
+                <span class="glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
