--- a/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -31,8 +31,18 @@
                </a>
                <span class="glyphicon glyphicon-align-justify"></span>
            </div>
-           <div class="container-fluid" ng-include="model.getWidgetTemplateUrl(widget.widgetType)">
-
+               <div ng-switch-when="HEADER">
+                   <ng-include src="'views/widget/templates/widget-header.view.client.html'"></ng-include>
+               </div>
+               <div ng-switch-when="IMAGE">
+                   <ng-include src="'views/widget/templates/widget-image.view.client.html'"></ng-include>
+               </div>
+               <div ng-switch-when="HTML">
+                   <ng-include src="'views/widget/templates/widget-html.view.client.html'"></ng-include>
+               </div>
+               <div ng-switch-when="YOUTUBE">
+                   <ng-include src="'views/widget/templates/widget-youtube.view.client.html'"></ng-include>
+               </div>
            </div>
     </div>
 </div>
