--- a/neu/webdev/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/page/templates/page-edit.view.client.html
@@ -25,10 +25,10 @@
             </a>
 
             <div class="navbar-text pull-right">
-                <div ng-click="model.updatePage()" class="navbar-link">
+                <a href="" ng-click="model.updatePage()" class="navbar-link">
 					  <span class="glyphicon glyphicon-ok">
 					  </span>
-                </div>
+                </a>
             </div>
         </div>
 
@@ -73,7 +73,7 @@
 
 
     <div class="col-sm-8 col-xs-12 wbdv-right-pane">
-        <div class="newNAme form-group">
+        <div class="top-padding form-group">
             <label for="page-edit-web-name" class="form-control-label">Name</label>
             <input ng-model="model.page.name"
                    placeholder="Page Name"
