--- a/neu/webdev/public/assignment/views/page/templates/page-new.view.client.html
+++ b/neu/webdev/public/assignment/views/page/templates/page-new.view.client.html
@@ -26,7 +26,7 @@
             </a>
 
             <div class="navbar-text pull-right">
-                <a ng-click="model.createPage()" class="navbar-link">
+                <a href="" ng-click="model.createPage()" class="navbar-link">
 					  <span class="glyphicon glyphicon-ok">
 					  </span>
                 </a>
@@ -44,7 +44,7 @@
                 <label class="grey-nav">New page</label>
             </a>
             <div class="navbar-text pull-right">
-                <a ng-click="model.createPage()" class="navbar-link">
+                <a href="" ng-click="model.createPage()" class="navbar-link">
 					  <span class="glyphicon glyphicon-ok">
 					  </span>
                 </a>
@@ -72,7 +72,7 @@
 
 
     <div class="col-sm-8 col-xs-12 wbdv-right-pane">
-        <div class="newNAme form-group">
+        <div class="top-padding form-group">
             <label for="page-new-web-name" class="form-control-label">Name</label>
             <input ng-model="model.page.name"
                    placeholder="Page Name"
