--- a/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
@@ -13,7 +13,7 @@
 </nav>
 
 
-    <div class="container newNAme">
+    <div class="container top-padding">
         <div class="alert alert-danger" ng-show="model.error">
             {{model.error}}
         </div>
