--- a/neu/webdev/public/assignment/views/website/templates/website-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/website/templates/website-edit.view.client.html
@@ -23,7 +23,7 @@
                 <label>Edit Website</label>
             </a>
             <div class="navbar-text pull-right">
-                <a ng-click="model.updateWebsite()" class="navbar-link">
+                <a href="" ng-click="model.updateWebsite()" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -41,7 +41,7 @@
                 <label>Edit Website</label>
             </a>
             <div class="navbar-text pull-right">
-                <a ng-click="model.updateWebsite()" class="navbar-link">
+                <a href="" ng-click="model.updateWebsite()" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -71,7 +71,7 @@
 
 
         <div class="col-sm-8 col-xs-12 wbdv-right-pane">
-            <div class="newNAme form-group">
+            <div class="top-padding form-group">
                 <label for="new-web-name" class="form-control-label">Website Name</label>
                 <input ng-model="model.website.name" placeholder="Website Name" id="new-web-name" class="form-control" type="text" value="Blogger">
             </div>
