--- a/neu/webdev/public/assignment/views/website/templates/website-new.view.client.html
+++ b/neu/webdev/public/assignment/views/website/templates/website-new.view.client.html
@@ -23,10 +23,10 @@
                 <label>New Website</label>
             </a>
             <div class="navbar-text pull-right">
-                <div ng-click="model.createWebsite()" class="navbar-link">
+                <a href="" ng-click="model.createWebsite()" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
-                </div>
+                </a>
             </div>
         </div>
 
@@ -41,10 +41,10 @@
                 <label>New Website</label>
             </a>
             <div class="navbar-text pull-right">
-                <div  ng-click="model.createWebsite()" class="navbar-link">
+                <a href="" ng-click="model.createWebsite()" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
-                </div>
+                </a>
             </div>
         </div>
     </div>
