--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
@@ -1,4 +1,4 @@
-<div class="newNAme"></div>
+<div class="top-padding"></div>
 <div class="container-fluid">
     <div class="form-group">
         <label for="widget-image-name" class="form-control-label">Name</label>
