--- a/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="navbar-text pull-left">
             <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page" class="white_navbar navbar-link">
-                  <span class=glyphicon glyphicon-chevron-left">
+                  <span class="glyphicon glyphicon-chevron-left">
                   </span>
             </a>
         </div>
@@ -51,13 +51,13 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="#" class="navbar-link">
+            <a href="" class="navbar-link">
                 <span class="glyphicon glyphicon-play"></span>
             </a>
         </div>
 
         <div class="navbar-text pull-left">
-            <a href="#" class="navbar-link">
+            <a href="" class="navbar-link">
                 <span class="glyphicon glyphicon-eye-open"></span>
             </a>
         </div>
