--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
@@ -1,5 +1,5 @@
 <div class="container-fluid bottom-padding">
-    <div class="newNAme form-group">
+    <div class="top-padding form-group">
         <label for="widget-edit-name" class="form-control-label">Name</label>
         <input ng-model="model.widget.name"
                id="widget-edit-name"
