--- a/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -10,7 +10,7 @@
             <label>Widget Edit</label>
         </a>
         <div class="navbar-text pull-right">
-            <a ng-click="model.updateWid(model.widget)" class="navbar-link">
+            <a href="" ng-click="model.updateWid(model.widget)" class="navbar-link">
                   <span class="glyphicon glyphicon-ok">
                   </span>
             </a>
