--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
@@ -16,12 +16,18 @@
                placeholder="Header text">
     </div>
     <div class="form-group">
-        <label for="widget-edit-size" class="form-control-label">Size</label>
-        <input ng-model="model.widget.size"
-               id="widget-edit-size"
-               class="form-control"
-               type="text"
-               placeholder="Header size">
+        <label for="widget-heading-widget-size">Size</label>
+        <select class="form-control"
+                ng-model="model.widget.size"
+                id="widget-heading-widget-size">
+            <option >1</option>
+            <option >2</option>
+            <option >3</option>
+            <option >4</option>
+            <option >5</option>
+            <option >6</option>
+        </select>
     </div>
     <a ng-click="model.deleteWidget()" class="btn btn-danger form-control">Delete</a>
+    </div>
 </div>
