--- a/neu/webdev/public/assignment/views/widget/templates/widget-header.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-header.view.client.html
@@ -4,4 +4,5 @@
     <h3 ng-switch-when="3">{{widget.text}}</h3>
     <h4 ng-switch-when="4">{{widget.text}}</h4>
     <h5 ng-switch-when="5">{{widget.text}}</h5>
+    <h6 ng-switch-when="6">{{widget.text}}</h6>
 </div>
