--- a/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
@@ -4,7 +4,7 @@
                 Profile
             </a>
             <div class="navbar-text pull-right">
-                <a ng-click="model.update()" class="navbar-link">
+                <a href="" ng-click="model.update()" class="navbar-link">
                   <span class="glyphicon glyphicon-ok">
                   </span>
                 </a>
