--- a/neu/webdev/public/assignment/css/styles.css
+++ b/neu/webdev/public/assignment/css/styles.css
@@ -70,6 +70,7 @@ body {
     padding-bottom: 5px;
     border-bottom-left-radius: 5px;
     opacity: 0.7;
+    z-index: 1;
 }
 
 .top-padding{
@@ -88,3 +89,4 @@ html, body {
     max-width: 100%;
     overflow-x: hidden;
 }
+
