--- a/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -31,19 +31,19 @@
                </a>
                <span class="glyphicon glyphicon-align-justify"></span>
            </div>
-               <div ng-switch-when="HEADER">
-                   <ng-include src="'views/widget/templates/widget-header.view.client.html'"></ng-include>
-               </div>
-               <div ng-switch-when="IMAGE">
-                   <ng-include src="'views/widget/templates/widget-image.view.client.html'"></ng-include>
-               </div>
-               <div ng-switch-when="HTML">
-                  <ng-include src="'views/widget/templates/widget-html.view.client.html'"></ng-include>
-               </div>
-               <div ng-switch-when="YOUTUBE">
-                   <ng-include src="'views/widget/templates/widget-youtube.view.client.html'"></ng-include>
-               </div>
+           <div ng-switch-when="HEADER">
+               <ng-include src="'views/widget/templates/widget-header.view.client.html'"></ng-include>
            </div>
+           <div ng-switch-when="IMAGE">
+               <ng-include src="'views/widget/templates/widget-image.view.client.html'"></ng-include>
+           </div>
+           <div ng-switch-when="HTML">
+               <ng-include src="'views/widget/templates/widget-html.view.client.html'"></ng-include>
+           </div>
+           <div ng-switch-when="YOUTUBE" class="embed-responsive embed-responsive-16by9">
+               <ng-include src="'views/widget/templates/widget-youtube.view.client.html'"></ng-include>
+           </div>
+       </div>
     </div>
 </div>
 
