--- a/neu/webdev/public/assignment/views/page/templates/page-new.view.client.html
+++ b/neu/webdev/public/assignment/views/page/templates/page-new.view.client.html
@@ -41,7 +41,7 @@
                 </a>
             </div>
             <a class="navbar-brand">
-                <label class="grey-nav">New page</label>
+                <label>New page</label>
             </a>
             <div class="navbar-text pull-right">
                 <a href="" ng-click="model.createPage()" class="navbar-link">
