--- a/neu/webdev/public/assignment/views/website/templates/website-list.view.client.html
+++ b/neu/webdev/public/assignment/views/website/templates/website-list.view.client.html
@@ -35,6 +35,7 @@
     </ul>
 </div>
 
+<div class="bottom-padding"></div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
