--- a/neu/webdev/public/assignment/views/page/templates/page-list.view.client.html
+++ b/neu/webdev/public/assignment/views/page/templates/page-list.view.client.html
@@ -34,6 +34,7 @@
     </ul>
 </div>
 
+<div class="bottom-padding"></div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
