--- a/neu/webdev/public/assignment/views/user/templates/login.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/login.view.client.html
@@ -1,14 +1,24 @@
  <div class="container">
         <h1>Login</h1>
-        <input  ng-model="user.username"
-                type="text"
-                class="form-control"
-                placeholder="username"/>
-        <input  ng-model="user.password"
-                type="password"
-                class="form-control"
-                placeholder="password"/>
-        <a class="btn btn-primary btn-block"
-           ng-click="model.login(user)">Login</a>
-        <a class="btn btn-success btn-block" href='#/register'>Register</a>
+
+         <div ng-show="model.error" class="alert alert-danger">
+                 {{model.error}}
+         </div>
+
+         <div ng-show="model.message" class="alert alert-info">
+                 {{model.message}}
+         </div>
+
+
+         <input  ng-model="user.username"
+                 type="text"
+                 class="form-control"
+                 placeholder="username"/>
+         <input  ng-model="user.password"
+                 type="password"
+                 class="form-control"
+                 placeholder="password"/>
+         <a class="btn btn-primary btn-block"
+            ng-click="model.login(user)">Login</a>
+         <a class="btn btn-success btn-block" href='#/register'>Register</a>
 </div>
