--- a/neu/webdev/public/assignment/views/user/templates/register.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/register.view.client.html
@@ -1,6 +1,14 @@
 <body>
     <div class="container">
         <h1>Register</h1>
+        <div ng-show="model.error" class="alert alert-danger">
+            {{model.error}}
+        </div>
+
+        <div ng-show="model.message" class="alert alert-info">
+            {{model.message}}
+        </div>
+
         <input  ng-model="model.user.username"
                 type="text"
                class="form-control"
